package ar.edu.utn.frba.dds.quemepongo.model.guardarropas;

public enum EstadoModificacion {
  PENDIENTE,
  ACEPTADA,
  RECHAZADA
}
