@startuml iteracion-5

class Usuario {
    agregar(guardarropa)
}

Usuario --> "*" Guardarropa

class Guardarropa {
  solicitar(solicitud)
  getSolicitudesPendientes() : SolicitudModificacion[]
  getSolicitudesAceptadas() : SolicitudModificacion[]
  agregar(prenda)
  quitar(prenda)
}

Guardarropa -right-> "*" Prenda
Guardarropa -left-> "*" SolicitudModificacion

abstract class SolicitudModificacion {
    aceptarEn(guardarropas)
    rechazar()
    deshacerEn(guardarropas)
    {abstract} realizarEn(guardarropas)
    {abstract} revertirEn(guardarropas)
}

SolicitudModificacion ..> Guardarropa
SolicitudModificacion -left-> EstadoModificacion

enum EstadoModificacion {
    PENDIENTE
    ACEPTADA
    RECHAZADA
}

SolicitudModificacion <|-- SolicitudAgregar
SolicitudModificacion <|-- SolicitudQuitar

class SolicitudAgregar {
}

SolicitudAgregar --> Prenda

class SolicitudQuitar {
}

SolicitudQuitar --> Prenda

class Prenda {
 esDeCategoria(categoria)
 esSugerible()
}


@enduml
